@@ -4,9 +4,12 @@
 #define rintf rint
 #endif
 #ifndef HAVE_RINT
-static double rint(double a)
-{
-  return (floor(a+0.5));
+#define DEFINE_RINT_IF_MISSING   \
+static double rint(double a)     \
+{                                \
+  return (floor(a+0.5));         \
 }
+#else
+#define DEFINE_RINT_IF_MISSING
 #endif
 
