@@ -1,3 +1,11 @@
+2002-04-11  Adam Fedor  <fedor@gnu.org>
+
+	* Headers/gnustep/gui/config.h.bot: New define if rint missing
+	* Source/NSBrowser.m: Use it.
+	* Source/NSRulerView.m: Idem.
+	* Source/NSMatrix.m: Idem.
+	* Source/NSClipView.m: Idem.
+
 Thu Apr 11 22:51:09 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Source/NSButtonCell.m ([-cellSize]): Use more space around
